@@ -4,6 +4,7 @@
 -Change: Replace Spanish Argentinan translation (es_AR) with Spanish (es) since KDE isn't able to use es_AR translations
 -Fix: Cdrom drive detection would fail with Ubuntu 12.04 (patch by Eike Thaden)
 -Fix: Musicbrainz lookup not working if data track present (patch by Eike Thaden)
+-Fix: Don't show data tracks in the CD ripper UI (patch by Eike Thaden)
 
 1.4.0:
 -Add: Show progress bar when loading file lists
